<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <item
        android:id="@+id/menu_search"
        android:contentDescription="@string/content_description_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_24"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info_24"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>